# pyZSG

./: .gitignore  MANIFEST.in  pyproject.toml
pyZSG/: __main__.py  zsg
