[project]
name = "pyZSG"
authors = [
    {name = "Ricardo Mota", email = "ricardo@noa.one"},
]
description = "Python wrapper for the ZSG binary"
readnme = "README.md"
license = {name = "MIT", url = "https://opensource.org/licenses/MIT"}
version = "1.0.0"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
    "setuptools_scm[toml]"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyZSG*"]

[tool.setuptools_scm]
write_to = "pyZSG/VERSION"

[project.scripts]
snakey = "pyZSG:__main__.main"