[project]
name = "pyZSG"
authors = [
    {name = "Ricardo Mota", email = "ricardo@noa.one"},
]
description = "Python wrapper for the ZSG binary"
readme = "README.md"
dynamic = ["version"]
requires-python = "~=3.7"
dependencies = [
    "pyserial",
    "requests",
    "click",
    "pylink-square",
    "ppk2-api",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
    "setuptools_scm[toml]"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyZSG*"]

[tool.setuptools_scm]
write_to = "pyZSG/version.py"

[project.scripts]
pyZSG = "pyZSG:__main__.main"